SFTP connection using "Connect to Server" times out
Steps to reproduce
- Open Files and go to Other Locations
- Put an sftp address into "Connect to Server" field, like "sftp://name@host"
- A warning pops up, sometimes with "???" instead of the correct server identity key
- After accepting the dialog, some time passes and a timeout error displayed: "Unable to access location/Timed out when logging in"
Current behavior
Impossible to "Connect to Server" using SFTP method on Gnome 40 and onwards, irrespective of the distribution used (tried several), but works fine on Gnome 3.